--- a/main.html
+++ b/main.html
@@ -10,7 +10,35 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<header>pailwaan</header>
+        <main>
+            <div> 
+            <nav>
+             <ul>
+                <li><a  href="" id="nav-actor">Actor</a></li>
+                <li><a  href="" id="nav-quote">Quotes</a></li>
+             </ul>   
+            </nav>
+        </div>
+        <summary>this film is about a sports person,how he has done comeback</summary>
+        <section id="actor">
+            <ul>
+                <li>sudeep</li>
+                <li>sunil</li>
+            </ul>
+        </section>
+        <section id="quote">
+            <ul>
+                <li>a1</li>
+                <li>a2</li>
+            </ul>
+        </section>
+        <footer>Produced by: &lt krishna &gt</footer>
+        </main>
+<aside>
+    <p><b>Imdb:</b> 9.8</p>
+    <p><b>dor:</b> 19/09/2021</p>
+</aside>
 </body>
 
 </html>
